# reddit-wisdom

./: README.md  main.py  pyproject.toml  research_top_200_stocks.py  test_top_200_tickers.py  top_200_test_report.txt
reddit-stock-tracker-backend/: .env  pyproject.toml
reddit-stock-tracker-backend/app/: main.py
reddit-stock-tracker-backend/app/services/: data_processor.py  reddit_collector.py  ticker_extractor.py
reddit-stock-tracker-frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
reddit-stock-tracker-frontend/src/: App.tsx  index.css
